--- a/src/app/header/main/main.component.html
+++ b/src/app/header/main/main.component.html
@@ -1,3 +1,101 @@
-<div>
+<!-- <div>
     <img src="/assets/photo/andrew-neel-cckf4TsHAuw-unsplash.jpg" alt="">
 </div>
+ -->
+
+
+
+
+
+
+
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-interval="3000">
+
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="transform">
+                <span>C</span>
+                <span>O</span>
+                <span>L</span>
+                <span>E</span>
+                <span>C</span>
+                <span>T</span>
+                <span>I</span>
+                <span>O</span>
+                <span>N</span>
+
+
+            </div>
+            <div class="transform-1">
+                <span>H</span>
+                <span>A</span>
+                <span>I</span>
+                <span>R</span>
+                <span>C</span>
+                <span>U</span>
+                <span>T</span>
+
+                <span style="padding-right:15px; padding-left: 15px;">&</span>
+
+                <span>B</span>
+                <span>E</span>
+                <span>A</span>
+                <span>R</span>
+                <span>D</span>
+
+            </div>
+           
+          
+            <img style="object-fit: cover;" src="/assets/photo/andrew-neel-cckf4TsHAuw-unsplash.jpg" class="d-block w-100" alt="...">
+
+        </div>
+        <div class="carousel-item">
+            <img style="object-fit: cover;" src="/assets/photo/home-bg.jpg" class="d-block w-100" alt="...">
+            <div class="transform-4">
+                <span>C</span>
+                <span>O</span>
+                <span>L</span>
+                <span>E</span>
+                <span>C</span>
+                <span>T</span>
+                <span>I</span>
+                <span>O</span>
+                <span>N</span>
+
+
+            </div>
+            <div class="transform-5">
+                <span>H</span>
+                <span>A</span>
+                <span>I</span>
+                <span>R</span>
+                <span>C</span>
+                <span>U</span>
+                <span>T</span>
+
+                <span style="padding-right:15px; padding-left: 15px;">&</span>
+
+                <span>B</span>
+                <span>E</span>
+                <span>A</span>
+                <span>R</span>
+                <span>D</span>
+
+            </div>
+          
+          
+        </div>
+
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
