--- a/src/app/header/main/main.component.html
+++ b/src/app/header/main/main.component.html
@@ -1,48 +1,37 @@
-<!-- <div>
-    <img src="/assets/photo/andrew-neel-cckf4TsHAuw-unsplash.jpg" alt="">
-</div>
- -->
-
-
-
-
-
-
 
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-interval="3000">
 
     <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="transform">
-                <span>C</span>
-                <span>O</span>
-                <span>L</span>
+                <span  style="color:red">M</span>
+                <span>A</span>
+                <span>K</span>
                 <span>E</span>
-                <span>C</span>
-                <span>T</span>
-                <span>I</span>
-                <span>O</span>
-                <span>N</span>
-
-
+                <span style="padding-right:15px; padding-left: 15px;">&</span>
+                <span>Y</span>
+                <span  style="color:red">O</span>
+                <span>U</span>
+                <span>R</span>
+              
+              
             </div>
             <div class="transform-1">
-                <span>H</span>
-                <span>A</span>
-                <span>I</span>
-                <span>R</span>
                 <span>C</span>
-                <span>U</span>
-                <span>T</span>
+                <span  style="color:red">O</span>
+                <span>D</span>
+                <span>E</span>
+              
+                
 
                 <span style="padding-right:15px; padding-left: 15px;">&</span>
 
                 <span>B</span>
                 <span>E</span>
-                <span>A</span>
-                <span>R</span>
-                <span>D</span>
-
+                <span>T</span>
+                <span>T</span>
+                <span>E</span>
+                <span  style="color:red">R</span>
             </div>
            
           
@@ -52,34 +41,34 @@
         <div class="carousel-item">
             <img style="object-fit: cover;" src="/assets/photo/home-bg.jpg" class="d-block w-100" alt="...">
             <div class="transform-4">
-                <span>C</span>
-                <span>O</span>
-                <span>L</span>
-                <span>E</span>
-                <span>C</span>
-                <span>T</span>
-                <span>I</span>
-                <span>O</span>
-                <span>N</span>
+                <span>W</span>
+                <span style="color:red" >O</span>
+                <span>R</span>
+                <span>K</span>
+
+                <span style="padding-right:15px; padding-left: 15px;">&</span>
+                <span>H</span>
+                <span  style="color:red">A</span>
+                <span>R</span>
+                <span>D</span>
+                
 
 
             </div>
             <div class="transform-5">
-                <span>H</span>
-                <span>A</span>
-                <span>I</span>
+          
+                <span>L</span>
+                <span>E</span>
+                <span  style="color:red">A</span>
                 <span>R</span>
-                <span>C</span>
-                <span>U</span>
-                <span>T</span>
+                <span>N</span>
 
                 <span style="padding-right:15px; padding-left: 15px;">&</span>
-
-                <span>B</span>
-                <span>E</span>
                 <span>A</span>
-                <span>R</span>
-                <span>D</span>
+                <span>L</span>
+                <span  style="color:red">O</span>
+                <span>T</span>
+                
 
             </div>
           
