--- a/src/app/header/nav/nav.component.css
+++ b/src/app/header/nav/nav.component.css
@@ -1,12 +1,25 @@
-
+.navbar{
+  height: 120px;
+  opacity: 0.5;
+  
+}
 .nav-link{
     position: relative;
     color: #ffff!important;
     text-decoration: none;
+    font-size: 20px;
+    font-weight: 600;
+ 
+    margin: 0px 30px;
+    margin-top: 20px;
 }
 
 .nav-link:hover{
     color: red!important;
+    font-weight: 600;
+   
+    transition: transform 0.5s ease;
+    transition-delay: 5.5s;
    
 
 }
@@ -35,7 +48,7 @@
   .ftco-section{
    
     position: fixed;
-    top: -100px;
+    top: -250px;
     width: 100%;
     color: white;
    
@@ -44,6 +57,7 @@
 
 .ftco-section.nav--hidden{
     transform: translateY(100%);
+    z-index: 20;
 }
 
 
