--- a/src/app/header/nav/nav.component.html
+++ b/src/app/header/nav/nav.component.html
@@ -38,6 +38,9 @@
           <li class="nav-item"><a href="#" class="nav-link">Work</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a routerLink="/porfolio" class="nav-link">PORTFOLIO</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Sing in</a></li>
+          <li class="nav-item"><a routerLink="/sign-up" class="nav-link">Sign up</a></li>
         </ul>
       </div>
     </div>
