--- a/src/app/header/sign-up/sign-up.component.html
+++ b/src/app/header/sign-up/sign-up.component.html
@@ -1,1 +1,56 @@
-<p>sign-up works!</p>
+
+<div class="container">
+  <div>
+    <mat-form-field  appearance="outline" color="warn">
+      <mat-label>name</mat-label>
+      <input type="text" matInput />
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field appearance="outline" color="warn">
+      <mat-label>surname</mat-label>
+      <input type="text" matInput />
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field appearance="outline" color="warn">
+      <mat-label>email</mat-label>
+      <input type="text" matInput />
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-form-field appearance="outline" color="warn">
+      <mat-label>password</mat-label>
+      <input type="text" matInput />
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-form-field appearance="outline" color="warn">
+      <mat-label>age</mat-label>
+      <input type="text" matInput />
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field appearance="outline" color="warn">
+      <mat-label>phone Number</mat-label>
+      <input type="text" matInput />
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field appearance="outline" color="warn" >
+      <mat-label>Select Gender</mat-label>
+      <mat-select>
+        <mat-option value="option">
+          Male
+        </mat-option>
+        <mat-option value="option">
+          FeMale
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+</div>
