--- a/src/app/header/blog/blog.component.html
+++ b/src/app/header/blog/blog.component.html
@@ -1,1 +1,65 @@
-<p>blog works!</p>
+<!-- <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="space-around center" fxLayoutGap="25px">
+    <mat-card *ngFor="let s of blog$ | async "  fxFlex="calc(33%-25px)" fxFlex.sm="calc(50%-25px)" >
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title> </mat-card-title>
+        <mat-card-subtitle></mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image>
+      <mat-card-content>
+        <p>
+         
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </div> -->
+
+
+  
+<ng-container   *ngIf="(blog$ | async) as blog">
+
+
+
+
+    <div class="blog-list-card">
+    
+    
+        <mat-card [ngStyle]="{'overflow': 'hidden'}" layout="row" layout-margin layout-wrap layout-align="center center" flex="25">
+            <mat-card-header class="flex">
+              <img mat-card-avatar src="/assets/photo/r2n21nrx9xj81.jpg">
+              <mat-card-subtitle>
+                Yesterday
+              </mat-card-subtitle>
+              <mat-card-title>{{blog.title}}</mat-card-title>
+            </mat-card-header>
+            <img mat-card-image src="/assets/photo/Qt1OsC.webp">
+            <mat-card-content>
+              <p [innerHTML]="blog.description"> </p>
+            </mat-card-content>
+            <mat-divider></mat-divider>
+            <mat-card-actions>
+              <div class="flex">
+                <button mat-icon-button color="primary">
+                  <mat-icon>share</mat-icon>
+                </button>
+                <button mat-icon-button color="warn">
+                  <mat-icon>favorite</mat-icon>
+                </button>
+                <span class="flex-1"></span>
+               
+               
+                <button mat-button >
+                  Save as
+                </button>
+              </div>
+            </mat-card-actions>
+          </mat-card>
+        
+        
+    
+    
+    
+    
+    </div>
+    
+    </ng-container>
