--- a/src/app/header/nav/nav.component.html
+++ b/src/app/header/nav/nav.component.html
@@ -36,10 +36,10 @@
         <ul class="navbar-nav m-auto">
           <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Work</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+          <li class="nav-item"><a routerLink="/blog" class="nav-link">Blog</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
           <li class="nav-item"><a routerLink="/porfolio" class="nav-link">PORTFOLIO</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Sing in</a></li>
+          <li class="nav-item"><a routerLink="/sign-in" class="nav-link">Sing in</a></li>
           <li class="nav-item"><a routerLink="/sign-up" class="nav-link">Sign up</a></li>
         </ul>
       </div>
