--- a/src/app/header/sign-up/sign-up.component.css
+++ b/src/app/header/sign-up/sign-up.component.css
@@ -1,28 +1,24 @@
-.container{
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    flex-direction: column;
-    background-color: gray;
-    /* border: 1px solid red; */
-    border-radius: 20px;
-    margin: 100px 0 px!important;
-    padding: 100px 0px;
-    /* margin: 100px 0px; */
-    margin-top: 100px;
-    margin-bottom: 100px;
-    text-align: center;
-    
-    opacity: 0.6;
-    z-index: 10;
-    position: absolute;
-    top: -20;
-    right: 0;
-    bottom: 0;
-    top: -78px;
-    left: 0;
-    height: 700px;
-    width: 600px;
-    padding: 80px
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: gray;
+  border-radius: 20px;
+  text-align: center;
+  opacity: 0.6;
+  z-index: 10;
+  position: absolute;
+  top: 10%;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 700px;
+  width: 600px;
+  padding: 80px;
 }
 
+.mdc-button {
+  width: 100%;
+
+  border-radius: 5px;
+}
