--- a/src/app/adminPanel/categories/categories.component.html
+++ b/src/app/adminPanel/categories/categories.component.html
@@ -1,1 +1,5 @@
-<p>categories works!</p>
+<div *ngFor="let cat of categories$ | async">
+
+
+    <app-categories-list [categoryesList$]="categories$" ></app-categories-list>
+</div>
