--- a/src/app/adminPanel/dashboard/dashboard.component.html
+++ b/src/app/adminPanel/dashboard/dashboard.component.html
@@ -11,9 +11,9 @@
 				<mat-icon class="menu-button" [ngClass]="{'rotated' : showSubmenu}" *ngIf="isExpanded || isShowing">expand_more</mat-icon>
 			</mat-list-item>
 			<div class="submenu" [ngClass]="{'expanded' : showSubmenu}" *ngIf="isShowing || isExpanded">
-				<a mat-list-item href="...">Add Blog</a>
-				<a mat-list-item href="...">Categories</a>
-				<a mat-list-item href="...">Tags</a>
+				<a mat-list-item routerLink="/add-blog">Add Blog</a>
+				<a mat-list-item routerLink="/categories-list">Categories</a>
+				<a mat-list-item routerLink="/tags">Tags</a>
 				
 			</div>
 		</mat-nav-list>
