--- a/src/app/adminPanel/categories/categories.component.html
+++ b/src/app/adminPanel/categories/categories.component.html
@@ -1,5 +1,7 @@
-<div *ngFor="let cat of categories$ | async">
 
-{{cat.title}}
-<app-categories-list [categoryesList$]="categories$" ></app-categories-list>
-</div>
+<!-- <div *ngFor="let cat of categories$ | async">
+
+
+
+</div> -->
+<app-categories-list [ngClass]="{'list': true}" [categoryesList$]="categories$" ></app-categories-list>
