--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,23 @@
 
 </ng-container> -->
 
-<app-nav></app-nav>
-<app-main></app-main>
-<router-outlet (active)="onActive()"></router-outlet>
 
-<app-footer></app-footer>
+  <app-nav></app-nav>
+
+    <app-main  ></app-main>
+
+  
+  
+  <router-outlet ></router-outlet>
+  <app-footer ></app-footer>
+  
+
+
+
+
+
+
+
+
 
 
