--- a/src/app/adminPanel/categories-list/categories-list.component.html
+++ b/src/app/adminPanel/categories-list/categories-list.component.html
@@ -1,3 +1,5 @@
+
+
 <ng-container *ngFor="let catList of categoryesList$ |async  ">
   <div class="blog-list-card">
     <mat-card
@@ -12,11 +14,11 @@
         <mat-card-subtitle>
           Yesterday
         </mat-card-subtitle>
-        <mat-card-title>{{catList.title  | json}}</mat-card-title>
+        <mat-card-title>{{catList.title }}</mat-card-title>
       </mat-card-header>
-      <img mat-card-image src="/assets/photo/Qt1OsC.webp" />
+      <img mat-card-image src="" />
       <mat-card-content>
-        <p [innerHTML]="catList.descr"></p>
+        <!-- <p [innerHTML]="catList.descr"></p> -->
       </mat-card-content>
       <mat-divider></mat-divider>
       <mat-card-actions>
