--- a/src/app/adminPanel/tags/tags.component.html
+++ b/src/app/adminPanel/tags/tags.component.html
@@ -1,1 +1,6 @@
-<p>tags works!</p>
+<div *ngFor="let tag of tags$ | async">
+    {{ tag.title }}
+    <button (click)="addTag(tag)">edit</button>
+    <button (click)="delete(tag._id)">delete</button>
+  </div>
+  <button (click)="addTag()">add tag</button>
