--- a/src/app/dialog/tangs-dialog/tangs-dialog.component.html
+++ b/src/app/dialog/tangs-dialog/tangs-dialog.component.html
@@ -1,4 +1,4 @@
-<h1> {{ !data ? 'Add' : 'Edit' }} Tag </h1>
+<h1> {{ !data ? 'Add' : 'Edit'  |json }} Tag </h1>
 <input [formControl]="tagControl" type="text">
 <hr>
 <button (click)="submit()">{{ !data ? 'Add' : 'Edit' }}</button>
